# serde_extract

./: Cargo.toml  README.md
src/: general.rs  lib.rs  map_access_from_serizable.rs  newtype_variant.rs
tests/: basic.rs
